docs : Add TIL 24_1113
2024년 11월 13일 TIL 작성
프로젝트 개발 환경 준비 과정

--- a/memo.ipynb
+++ b/memo.ipynb
@@ -10,9 +10,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AI",
+   "display_name": "llm_rag",
    "language": "python",
-   "name": "ai"
+   "name": "llm_rag"
   },
   "language_info": {
    "name": "python",
