--- a/memo.ipynb
+++ b/memo.ipynb
@@ -1,22 +1,60 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 정리되지 않은 정보 기록"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0, Character: h\n",
+      "Index: 1, Character: e\n",
+      "Index: 2, Character: l\n",
+      "Index: 3, Character: l\n",
+      "Index: 4, Character: o\n"
+     ]
+    }
+   ],
+   "source": [
+    "code = \"hello\"\n",
+    "for i, ch in enumerate(code):\n",
+    "    print(f\"Index: {i}, Character: {ch}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "enumerate(code)는 code의 길이만큼 (인덱스, 요소) 쌍을 반환합니다. 따라서 각 반복에서 i에는 인덱스 값(정수)이, ch에는 해당 인덱스의 문자 값이 들어갑니다."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm_rag",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "llm_rag"
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
